# ecies_and_ecdh

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  INSTALL.md  LICENSE.md  README.md
docs/: Doxyfile
include/: EncryptionManager.h
src/: EncryptionManager.cpp  main.cpp
tests/: ecies_m.cpp  ecies_plus.cpp  keygen.cpp  test_encryption_app.py  ur.txt
